// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Error renders correctly 1`] = `
<div
  className="container align-items-center justify-content-center"
  id="error-wrapper"
>
  <div
    className="container"
  >
    <h3
      className="text-center"
    >
      Page Not Found
    </h3>
  </div>
</div>
`;

exports[`Error renders correctly when mounted 1`] = `
<Error
  dispatch={[Function]}
  type={404}
>
  <div
    className="container align-items-center justify-content-center"
    id="error-wrapper"
  >
    <div
      className="container"
    >
      <h3
        className="text-center"
      >
        Page Not Found
      </h3>
    </div>
  </div>
</Error>
`;
